--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reddit-viewer",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://dzaboffcodes.github.io/reddit-viewer/",
   "type": "module",
   "scripts": {
     "dev": "vite",
